--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -8,8 +8,8 @@
         {{ site.title }}
       </a>
     </{% if page.layout == "index" %}h1{% else %}div{% endif %}>
-    <p>{{ site.tagline }}</p>
-    <p class="lead">{{ site.description }}</p>
+    <p class="lead">{{ site.tagline }}</p>
+    <p>{{ site.description }}</p>
   </header>
   {% include sidebar-nav-links.html %}
 
