--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,3 +4,6 @@
 ---
 
 @import "hydeout";
+
+@import url(https://tauhu.tw/tauhu-oo.css);
+$root-font-family: tauhu-oo, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif !default;
