--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -13,7 +13,7 @@
     </a>
   {% endif %}
 
-  <a id="subscribe-link"
+  {% comment %} <a id="subscribe-link"
      class="icon" title="Subscribe" aria-label="Subscribe"
      href="{{ site.feed.path | default: 'feed.xml' | relative_url }}">
     {% include svg/feed.svg %}
@@ -32,16 +32,14 @@
     {% endif %}
   {% endfor %}
 
-  {% comment %}
-  {% if tags_page %}
+  {% comment %} {% if tags_page %}
     <a id="tags-link"
        class="icon{% if page.url == '/tags' %} active{% endif %}"
        title="Tags" aria-label="Tags"
        href="{{ tags_page.url | relative_url }}">
       {% include svg/tags.svg %}
     </a>
-  {% endif %}
-  {% endcomment %}
+  {% endif %} {% endcomment %}
 
   {% if search_page %}
     <a id="search-link"
