--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,6 @@
     <span class="site-version">Currently v{{ site.version }}</span>
   {% endif %}
 
-  {% include sidebar-icon-links.html %}
+  {% comment %} {% include sidebar-icon-links.html %} {% endcomment %}
   {% include copyright.html %}
 </div>
