--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,17 +19,7 @@
 
   {% comment %} {% include sidebar-icon-links.html %} {% endcomment %}
 
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
-  <p> </p>
+  <span style="display:block; height: 200px;"></span>
 
   {% include copyright.html %}
 </div>
