Keng-sin pán-bīn.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
 
   {% comment %} {% include sidebar-icon-links.html %} {% endcomment %}
 
-  <span style="display:block; height: 200px;"></span>
+  <p margin-top: 50px />
 
   {% include copyright.html %}
 </div>
