Keng-sin pán-bīn.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
 
   {% comment %} {% include sidebar-icon-links.html %} {% endcomment %}
 
-  <p margin-top: 50px />
+  <span style="display:block; height: 50px;"></span>
 
   {% include copyright.html %}
 </div>
