--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,5 +1,5 @@
 <div class="post-meta">
-  <span class="post-date">{{ include.post.date | date_to_string }}</span>
+  {% comment %} <span class="post-date">{{ include.post.date | date_to_string }}</span> {% endcomment %}
   <span class="post-categories">
     {% for category in include.post.categories %}
       &bull;
