--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,5 +1,7 @@
 <div class="post-meta">
   {% comment %} <span class="post-date">{{ include.post.date | date_to_string }}</span> {% endcomment %}
+  <span style="display:block; height: 20px;"></span>
+  
   <span class="post-categories">
     {% for category in include.post.categories %}
       &bull;
