--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
-<p>
+{% comment %} <p>
   &copy; {{ site.time | date: '%Y' }}.
   <a href="{{ "/LICENSE.md" | relative_url }}">CC BY-NC-ND 4.0</a>
-</p>
+</p> {% endcomment %}
