--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: default
 
   <div class="post-body">
     {{ content }}
-    {% include post-tags.html post=page %}
+    <!-- {% include post-tags.html post=page %} -->
   </div>
 
-  {% include comments.html %}
-  {% include related_posts.html %}
+  <!-- {% include comments.html %} -->
+  <!-- {% include related_posts.html %} -->
 </div>
